// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge component > renders children and shows badge count 1`] = `
<div>
  <span
    class="ant-badge css-dev-only-do-not-override-mncuj7"
  >
    <span
      data-testid="child"
    >
      Inbox
    </span>
    <sup
      class="ant-scroll-number ant-badge-count"
      data-show="true"
      style="background: rgb(250, 204, 21);"
      title="5"
    >
      <bdi>
        <span
          class="ant-scroll-number-only"
          style="transition: none;"
        >
          <span
            class="ant-scroll-number-only-unit current"
          >
            5
          </span>
        </span>
      </bdi>
    </sup>
  </span>
</div>
`;

exports[`Badge component > renders children without count 1`] = `
<div>
  <span
    class="ant-badge ant-badge-status css-dev-only-do-not-override-mncuj7"
  >
    <span
      data-testid="child"
    >
      No count
    </span>
  </span>
</div>
`;

exports[`Badge component > shows dot badge when dot prop is true 1`] = `
<div>
  <span
    class="ant-badge ant-badge-status css-dev-only-do-not-override-mncuj7"
  >
    <span
      data-testid="child"
    >
      Dot badge
    </span>
    <sup
      class="ant-scroll-number ant-badge-dot"
      data-show="true"
      style="background: rgb(250, 204, 21);"
    />
  </span>
</div>
`;
